@@ -1,3 +1,9 @@
+2012-03-07 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCopt.c (getAddrspaceiCode),
+	  src/SDCCralloc.hpp (create_cfg): properly handle IFX and
+	  JUMPTABLE operands
+
 2012-03-06 Borut Razem <borut.razem AT gmail.com>
 
 	* Makefile.in, support/sdbinutils/binutils/Makefile.am,
